work on save book and refresh library fncs

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
         <div class="container library">
             <h2>Library</h2>
             <div class="shelf">
+                <div class="book">
+                    <div>text</div>
+                    <button>Read/Unread</button>
+                    <button>Delete</button>
+                </div>
             </div>
         </div>
     </div>
